Support for Java 11 and specifying producing types.