@@ -19,15 +19,15 @@
   </repositories>
 
   <properties>
-    <undertow.version>1.4.25.Final</undertow.version>
+    <undertow.version>2.0.13.Final</undertow.version>
     <jersey.version>2.27</jersey.version>
-    <hk.locator.version>2.5.0-b61</hk.locator.version>
-    <jackson.version>2.9.6</jackson.version>
-    <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+    <hk.locator.version>2.5.0-b62</hk.locator.version>
+    <jackson.version>2.9.7</jackson.version>
+    <javax.servlet-api.version>4.0.1</javax.servlet-api.version>
     <com.neovisionaries.nv-i18n.version>1.23</com.neovisionaries.nv-i18n.version>
-    <com.google.guava.version>25.1-jre</com.google.guava.version>
-    <maven.compiler.target>10</maven.compiler.target>
-    <maven.compiler.source>10</maven.compiler.source>
+    <com.google.guava.version>26.0-jre</com.google.guava.version>
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -90,6 +90,11 @@
       <artifactId>javax.inject</artifactId>
       <version>${hk.locator.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.4.0-b180830.0438</version>
+    </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -122,7 +127,7 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
-      <version>5.2.0</version>
+      <version>5.3.1</version>
     </dependency>
   </dependencies>
 
@@ -152,13 +157,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
-        <configuration>
-          <compilerArgs>
-            <arg>--add-modules</arg>
-            <arg>java.xml.bind</arg>
-          </compilerArgs>
-        </configuration>
+        <version>3.8.0</version>
       </plugin>
 
       <plugin>
